<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Intro_Activity">

    <ImageView
        android:id="@+id/firstpagebackground"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        android:src="@drawable/firstpagebackground"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/firstpagetext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="369dp"
        android:text="@string/welcome_to_the_food_delivery_app_please_signin_to_continue"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/firstpagebackground"
        app:layout_constraintEnd_toEndOf="@+id/firstpagebackground"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/firstpagebackground"
        app:layout_constraintVertical_bias="1.5" />

    <Button
        android:id="@+id/introbutton"
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/black_button"
        android:text="@string/signin"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:textStyle="bold"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="@+id/firstpagebackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstpagetext"
        tools:flow_verticalAlign="center" />

</androidx.constraintlayout.widget.ConstraintLayout>