<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/secpagebackground"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/main"
                android:layout_width="match_parent"
                android:layout_height="1100dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="24dp"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/have_a_good_day"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="105dp"
                    android:layout_height="91dp"
                    android:layout_marginEnd="32dp"
                    android:importantForAccessibility="no"
                    android:src="@drawable/user"
                    app:layout_constraintBottom_toBottomOf="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0" />

                <EditText
                    android:id="@+id/editTextPersonName"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="36dp"
                    android:layout_marginEnd="32dp"
                    android:background="@drawable/search_background"
                    android:drawableStart="@drawable/search"
                    android:drawablePadding="10dp"
                    android:ems="10"
                    android:hint="@string/search_for_food"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textSize="19sp"
                    android:textStyle="bold|italic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="396dp"
                    android:layout_height="1016dp"
                    app:layout_constraintTop_toBottomOf="@+id/editTextPersonName"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="-3dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="194dp"
                        android:layout_height="62dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="34dp"
                        android:paddingTop="30dp"
                        android:text="Domino's and McD"
                        android:textAlignment="center"
                        android:textColor="#050505"
                        android:textSize="22sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@+id/pizzaclick"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="HardcodedText" />

                    <Button
                        android:id="@+id/pizzaclick"
                        android:layout_width="181dp"
                        android:layout_height="48dp"
                        android:layout_marginTop="34dp"
                        android:text="Click Here"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        tools:ignore="HardcodedText" />

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="140dp"
                        android:layout_height="137dp"
                        android:layout_marginEnd="42dp"
                        app:layout_constraintBottom_toBottomOf="@+id/pizzaclick"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toEndOf="@+id/textView3"
                        app:layout_constraintTop_toTopOf="@+id/textView3"
                        app:layout_constraintVertical_bias="1.0"
                        app:srcCompat="@drawable/dominos" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="397dp"
                        android:layout_height="805dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/pizzaclick"
                        tools:layout_editor_absoluteX="-1dp">

                        <TextView
                            android:id="@+id/textView6"
                            android:layout_width="215dp"
                            android:layout_height="46dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginTop="19dp"
                            android:layout_marginBottom="28dp"
                            android:text="Punjabi Restaurant"
                            android:textAlignment="center"
                            android:textColor="#0B0A0A"
                            android:textSize="24sp"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toTopOf="@+id/gujaraticlick"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/gujaraticlick"
                            android:layout_width="181dp"
                            android:layout_height="48dp"
                            android:layout_marginTop="28dp"
                            android:text="Click Here"
                            app:layout_constraintEnd_toEndOf="@+id/textView6"
                            app:layout_constraintHorizontal_bias="0.0"
                            app:layout_constraintStart_toStartOf="@+id/textView6"
                            app:layout_constraintTop_toBottomOf="@+id/textView6"
                            tools:ignore="HardcodedText" />

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="125dp"
                            android:layout_height="104dp"
                            android:layout_marginTop="30dp"
                            android:layout_marginEnd="16dp"
                            app:layout_constraintBottom_toBottomOf="@+id/gujaraticlick"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.107"
                            app:layout_constraintStart_toEndOf="@+id/textView6"
                            app:layout_constraintTop_toTopOf="@+id/textView6"
                            app:layout_constraintVertical_bias="1.0"
                            app:srcCompat="@drawable/punjab" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/constraintLayout2"
                            android:layout_width="match_parent"
                            android:layout_height="800dp"
                            android:layout_marginTop="45dp"
                            app:layout_constraintTop_toBottomOf="@+id/gujaraticlick"
                            tools:layout_editor_absoluteX="133dp">

                            <TextView
                                android:id="@+id/textView7"
                                android:layout_width="187dp"
                                android:layout_height="43dp"
                                android:layout_marginStart="16dp"
                                android:layout_marginTop="32dp"
                                android:text="Subway"
                                android:textAlignment="center"
                                android:textColor="#040404"
                                android:textSize="26sp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toTopOf="@+id/subwayclick"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                            <Button
                                android:id="@+id/subwayclick"
                                android:layout_width="181dp"
                                android:layout_height="48dp"
                                android:layout_marginTop="32dp"
                                android:text="Click Here"
                                app:layout_constraintEnd_toEndOf="@+id/textView7"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView7"
                                app:layout_constraintTop_toBottomOf="@+id/textView7" />

                            <ImageView
                                android:id="@+id/imageView4"
                                android:layout_width="155dp"
                                android:layout_height="123dp"
                                android:layout_marginStart="4dp"
                                android:layout_marginEnd="18dp"
                                app:layout_constraintBottom_toBottomOf="@+id/subwayclick"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.555"
                                app:layout_constraintStart_toEndOf="@+id/textView7"
                                app:layout_constraintTop_toTopOf="@+id/textView7"
                                app:layout_constraintVertical_bias="0.0"
                                app:srcCompat="@drawable/subway" />

                            <androidx.constraintlayout.widget.ConstraintLayout
                                android:layout_width="match_parent"
                                android:layout_height="200dp"
                                android:layout_marginTop="16dp"
                                app:layout_constraintTop_toBottomOf="@+id/subwayclick"
                                tools:layout_editor_absoluteX="3dp">

                                <TextView
                                    android:id="@+id/textView8"
                                    android:layout_width="87dp"
                                    android:layout_height="36dp"
                                    android:layout_marginTop="30dp"
                                    android:text="KFC"
                                    android:textAlignment="center"
                                    android:textColor="#0B0A0A"
                                    android:textSize="28sp"
                                    android:textStyle="bold"
                                    app:layout_constraintEnd_toStartOf="@+id/imageView5"
                                    app:layout_constraintStart_toStartOf="parent"
                                    app:layout_constraintTop_toTopOf="parent" />

                                <Button
                                    android:id="@+id/kfcclick"
                                    android:layout_width="181dp"
                                    android:layout_height="48dp"
                                    android:layout_marginTop="16dp"
                                    android:text="Click Here"
                                    app:layout_constraintEnd_toEndOf="@+id/textView8"
                                    app:layout_constraintHorizontal_bias="0.521"
                                    app:layout_constraintStart_toStartOf="@+id/textView8"
                                    app:layout_constraintTop_toBottomOf="@+id/textView8" />

                                <ImageView
                                    android:id="@+id/imageView5"
                                    android:layout_width="161dp"
                                    android:layout_height="101dp"
                                    android:layout_marginEnd="18dp"
                                    app:layout_constraintBottom_toBottomOf="@+id/kfcclick"
                                    app:layout_constraintEnd_toEndOf="parent"
                                    app:layout_constraintTop_toTopOf="@+id/textView8"
                                    app:srcCompat="@drawable/kfc" />
                            </androidx.constraintlayout.widget.ConstraintLayout>
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>